2006-03-27  Andy Wingo  <wingo@pobox.com>

	* flumotion/extern/SQuaLe.py (Cursor._set_result): Only get the
	result's data if it was an operation that returns a result set.
	This fixes non-select calls like INSERT operations.

	* flumotion/component/plugs/loggers.py
	(DatabaseLogger.translators): Make the 'database' plug property
	map to 'connection_name' for SQuaLe.

	* flumotion/extern/Makefile.am (flumotion_PYTHON): Add SQuaLe to
	the makefile.

	* flumotion/extern/SQuaLe.py: New file, implements a PEP-249
	interface for SQuaLe (squale.sourceforge.net).

2006-03-24  Andy Wingo  <wingo@pobox.com>

	* flumotion/component/component.py (BaseComponent.setup.setup_plugs) 
	(BaseComponent.start): Properly handle errors when loading and
	starting plugs.

	* flumotion/component/plugs/loggers.py (DatabaseLogger.stop): Make
	able to be called more than once.

	* flumotion/launch/main.py (start_components): Rework so as not to
	be a defer generator; defer generators are not appropriate if an
	exception can be thrown immediately.
	(main): Rework so as not to run the reactor if there is an error.
	(DeferredDelay): Pass through the value in the callback.
	(ComponentWrapper.stop): New method, stops the components if there
	is an error. Prevents a segfault when exiting due to a startup
	error.

2006-03-23  Michael Smith  <msmith@fluendo.com>

	* Makefile.am:
	* configure.ac:
	* flumotion/Makefile.am:
	  Add new porter directory Makefile, add to pychecker list

	* flumotion/porter/Makefile.am:
	* flumotion/porter/__init__.py:
	* flumotion/porter/porterclient.py:
	  Add porter client: all the code needed to attach to a porter server,
	  hooking a (specified) factory to incoming FDs, and adding them to
	  the reactor

	* flumotion/extern/fdpass/Makefile.am:
	* flumotion/extern/fdpass/__init__.py
	* flumotion/extern/fdpass/fdpass.c: (writefds):
	  Add package init.
	  Change return value from fdpass.writefds()

	* flumotion/test/common.py: